Fix contrast in ProductCardDescription

--- a/src/ProductCard/ProductCardDescription/styles.scss
+++ b/src/ProductCard/ProductCardDescription/styles.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-flow: column;
   justify-content: flex-start;
-  
+
   flex: 0 0 auto;
   height: 50%;
   padding: 1.5rem 2rem;
@@ -24,7 +24,7 @@
 }
 
 .product-card-description {
-  color: #95a5a6;
+  color: #2c3e50;
   font-size: 0.75rem;
   letter-spacing: 2px;
 }
